src/Python3Parser.ts
// Generated from ./src/Python3.g4 by ANTLR 4.6-SNAPSHOT


import { ATN } from 'antlr4ts/atn/ATN';
import { ATNDeserializer } from 'antlr4ts/atn/ATNDeserializer';
import { FailedPredicateException } from 'antlr4ts/FailedPredicateException';
import { NotNull } from 'antlr4ts/Decorators';
import { NoViableAltException } from 'antlr4ts/NoViableAltException';
import { Override } from 'antlr4ts/Decorators';
import { Parser } from 'antlr4ts/Parser';
import { ParserRuleContext } from 'antlr4ts/ParserRuleContext';
import { ParserATNSimulator } from 'antlr4ts/atn/ParserATNSimulator';
import { ParseTreeListener } from 'antlr4ts/tree/ParseTreeListener';
import { ParseTreeVisitor } from 'antlr4ts/tree/ParseTreeVisitor';
import { RecognitionException } from 'antlr4ts/RecognitionException';
import { RuleContext } from 'antlr4ts/RuleContext';
import { RuleVersion } from 'antlr4ts/RuleVersion';
import { TerminalNode } from 'antlr4ts/tree/TerminalNode';
import { Token } from 'antlr4ts/Token';
import { TokenStream } from 'antlr4ts/TokenStream';
import { Vocabulary } from 'antlr4ts/Vocabulary';
import { VocabularyImpl } from 'antlr4ts/VocabularyImpl';

import * as Utils from 'antlr4ts/misc/Utils';

import { Python3Listener } from './Python3Listener';

export class Python3Parser extends Parser {
	public static readonly T__0=1;
	public static readonly T__1=2;
	public static readonly READ=3;
	public static readonly LOG=4;
	public static readonly DEF=5;
	public static readonly RETURN=6;
	public static readonly RAISE=7;
	public static readonly FROM=8;
	public static readonly IMPORT=9;
	public static readonly AS=10;
	public static readonly GLOBAL=11;
	public static readonly NONLOCAL=12;
	public static readonly ASSERT=13;
	public static readonly IF=14;
	public static readonly ELIF=15;
	public static readonly ELSE=16;
	public static readonly WHILE=17;
	public static readonly FOR=18;
	public static readonly IN=19;
	public static readonly TRY=20;
	public static readonly FINALLY=21;
	public static readonly WITH=22;
	public static readonly EXCEPT=23;
	public static readonly LAMBDA=24;
	public static readonly OR=25;
	public static readonly AND=26;
	public static readonly NOT=27;
	public static readonly IS=28;
	public static readonly NONE=29;
	public static readonly TRUE=30;
	public static readonly FALSE=31;
	public static readonly CLASS=32;
	public static readonly YIELD=33;
	public static readonly DEL=34;
	public static readonly PASS=35;
	public static readonly CONTINUE=36;
	public static readonly BREAK=37;
	public static readonly NEWLINE=38;
	public static readonly NAME=39;
	public static readonly STRING_LITERAL=40;
	public static readonly DECIMAL_INTEGER=41;
	public static readonly FLOAT_NUMBER=42;
	public static readonly IMAG_NUMBER=43;
	public static readonly DOT=44;
	public static readonly OPEN_PAREN=45;
	public static readonly CLOSE_PAREN=46;
	public static readonly COMMA=47;
	public static readonly COLON=48;
	public static readonly POWER=49;
	public static readonly ASSIGN=50;
	public static readonly OPEN_BRACK=51;
	public static readonly CLOSE_BRACK=52;
	public static readonly ADD=53;
	public static readonly MINUS=54;
	public static readonly DIV=55;
	public static readonly MOD=56;
	public static readonly OPEN_BRACE=57;
	public static readonly CLOSE_BRACE=58;
	public static readonly LESS_THAN=59;
	public static readonly GREATER_THAN=60;
	public static readonly EQUALS=61;
	public static readonly GT_EQ=62;
	public static readonly LT_EQ=63;
	public static readonly NOT_EQ_2=64;
	public static readonly ADD_ASSIGN=65;
	public static readonly SUB_ASSIGN=66;
	public static readonly MULT_ASSIGN=67;
	public static readonly DIV_ASSIGN=68;
	public static readonly MOD_ASSIGN=69;
	public static readonly POWER_ASSIGN=70;
	public static readonly SKIP_=71;
	public static readonly UNKNOWN_CHAR=72;
	public static readonly INDENT=73;
	public static readonly DEDENT=74;
	public static readonly RULE_tl_input = 0;
	public static readonly RULE_funcdef = 1;
	public static readonly RULE_parameters = 2;
	public static readonly RULE_varargslist = 3;
	public static readonly RULE_vfpdef = 4;
	public static readonly RULE_block_stmt = 5;
	public static readonly RULE_stmt = 6;
	public static readonly RULE_simple_stmt = 7;
	public static readonly RULE_small_stmt = 8;
	public static readonly RULE_expr_stmt = 9;
	public static readonly RULE_testlist_star_expr = 10;
	public static readonly RULE_augassign = 11;
	public static readonly RULE_flow_stmt = 12;
	public static readonly RULE_break_stmt = 13;
	public static readonly RULE_continue_stmt = 14;
	public static readonly RULE_return_stmt = 15;
	public static readonly RULE_import_stmt = 16;
	public static readonly RULE_import_name = 17;
	public static readonly RULE_import_from = 18;
	public static readonly RULE_dotted_as_names = 19;
	public static readonly RULE_compound_stmt = 20;
	public static readonly RULE_if_stmt = 21;
	public static readonly RULE_while_stmt = 22;
	public static readonly RULE_for_stmt = 23;
	public static readonly RULE_suite = 24;
	public static readonly RULE_test = 25;
	public static readonly RULE_test_nocond = 26;
	public static readonly RULE_or_test = 27;
	public static readonly RULE_and_test = 28;
	public static readonly RULE_not_test = 29;
	public static readonly RULE_comparison = 30;
	public static readonly RULE_comp_op = 31;
	public static readonly RULE_expr = 32;
	public static readonly RULE_arith_expr = 33;
	public static readonly RULE_term = 34;
	public static readonly RULE_factor = 35;
	public static readonly RULE_power = 36;
	public static readonly RULE_atom = 37;
	public static readonly RULE_testlist_comp = 38;
	public static readonly RULE_trailer = 39;
	public static readonly RULE_subscriptlist = 40;
	public static readonly RULE_subscript = 41;
	public static readonly RULE_exprlist = 42;
	public static readonly RULE_testlist = 43;
	public static readonly RULE_dictorsetmaker = 44;
	public static readonly RULE_arglist = 45;
	public static readonly RULE_argument = 46;
	public static readonly RULE_comp_iter = 47;
	public static readonly RULE_comp_for = 48;
	public static readonly RULE_comp_if = 49;
	public static readonly RULE_str = 50;
	public static readonly RULE_number = 51;
	public static readonly RULE_integer = 52;
	public static readonly ruleNames: string[] = [
		"tl_input", "funcdef", "parameters", "varargslist", "vfpdef", "block_stmt", 
		"stmt", "simple_stmt", "small_stmt", "expr_stmt", "testlist_star_expr", 
		"augassign", "flow_stmt", "break_stmt", "continue_stmt", "return_stmt", 
		"import_stmt", "import_name", "import_from", "dotted_as_names", "compound_stmt", 
		"if_stmt", "while_stmt", "for_stmt", "suite", "test", "test_nocond", "or_test", 
		"and_test", "not_test", "comparison", "comp_op", "expr", "arith_expr", 
		"term", "factor", "power", "atom", "testlist_comp", "trailer", "subscriptlist", 
		"subscript", "exprlist", "testlist", "dictorsetmaker", "arglist", "argument", 
		"comp_iter", "comp_for", "comp_if", "str", "number", "integer"
	];

	private static readonly _LITERAL_NAMES: (string | undefined)[] = [
		undefined, "'end'", "'*'", "'leer'", "'log'", "'funcion'", "'retorno'", 
		"'raise'", "'desde'", "'importar'", "'as'", "'global'", "'nonlocal'", 
		"'assert'", "'if'", "'elif'", "'else'", "'while'", "'for'", "'in'", "'try'", 
		"'finally'", "'with'", "'except'", "'lambda'", "'||'", "'&&'", "'!'", 
		"'is'", "'nil'", "'true'", "'false'", "'class'", "'yield'", "'del'", "'pass'", 
		"'continue'", "'break'", undefined, undefined, undefined, undefined, undefined, 
		undefined, "'.'", "'('", "')'", "','", "':'", "'^'", "'='", "'['", "']'", 
		"'+'", "'-'", "'/'", "'%'", "'{'", "'}'", "'<'", "'>'", "'=='", "'>='", 
		"'<='", "'!='", "'+='", "'-='", "'*='", "'/='", "'%='", "'^='"
	];
	private static readonly _SYMBOLIC_NAMES: (string | undefined)[] = [
		undefined, undefined, undefined, "READ", "LOG", "DEF", "RETURN", "RAISE", 
		"FROM", "IMPORT", "AS", "GLOBAL", "NONLOCAL", "ASSERT", "IF", "ELIF", 
		"ELSE", "WHILE", "FOR", "IN", "TRY", "FINALLY", "WITH", "EXCEPT", "LAMBDA", 
		"OR", "AND", "NOT", "IS", "NONE", "TRUE", "FALSE", "CLASS", "YIELD", "DEL", 
		"PASS", "CONTINUE", "BREAK", "NEWLINE", "NAME", "STRING_LITERAL", "DECIMAL_INTEGER", 
		"FLOAT_NUMBER", "IMAG_NUMBER", "DOT", "OPEN_PAREN", "CLOSE_PAREN", "COMMA", 
		"COLON", "POWER", "ASSIGN", "OPEN_BRACK", "CLOSE_BRACK", "ADD", "MINUS", 
		"DIV", "MOD", "OPEN_BRACE", "CLOSE_BRACE", "LESS_THAN", "GREATER_THAN", 
		"EQUALS", "GT_EQ", "LT_EQ", "NOT_EQ_2", "ADD_ASSIGN", "SUB_ASSIGN", "MULT_ASSIGN", 
		"DIV_ASSIGN", "MOD_ASSIGN", "POWER_ASSIGN", "SKIP_", "UNKNOWN_CHAR", "INDENT", 
		"DEDENT"
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(Python3Parser._LITERAL_NAMES, Python3Parser._SYMBOLIC_NAMES, []);

	@Override
	@NotNull
	public get vocabulary(): Vocabulary {
		return Python3Parser.VOCABULARY;
	}

	@Override
	public get grammarFileName(): string { return "Python3.g4"; }

	@Override
	public get ruleNames(): string[] { return Python3Parser.ruleNames; }

	@Override
	public get serializedATN(): string { return Python3Parser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(Python3Parser._ATN, this);
	}
	@RuleVersion(0)
	public tl_input(): Tl_inputContext {
		let _localctx: Tl_inputContext = new Tl_inputContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, Python3Parser.RULE_tl_input);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 109;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===Python3Parser.NEWLINE) {
				{
				{
				this.state = 106;
				this.match(Python3Parser.NEWLINE);
				}
				}
				this.state = 111;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 121;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input,2,this._ctx);
			while ( _alt!==2 && _alt!==ATN.INVALID_ALT_NUMBER ) {
				if ( _alt===1 ) {
					{
					{
					this.state = 112;
					this.import_stmt();
					this.state = 116;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (_la===Python3Parser.NEWLINE) {
						{
						{
						this.state = 113;
						this.match(Python3Parser.NEWLINE);
						}
						}
						this.state = 118;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					}
					} 
				}
				this.state = 123;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input,2,this._ctx);
			}
			this.state = 133;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===Python3Parser.DEF) {
				{
				{
				this.state = 124;
				this.funcdef();
				this.state = 128;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===Python3Parser.NEWLINE) {
					{
					{
					this.state = 125;
					this.match(Python3Parser.NEWLINE);
					}
					}
					this.state = 130;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
				}
				this.state = 135;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 145;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << Python3Parser.READ) | (1 << Python3Parser.LOG) | (1 << Python3Parser.RETURN) | (1 << Python3Parser.FROM) | (1 << Python3Parser.IMPORT) | (1 << Python3Parser.IF) | (1 << Python3Parser.WHILE) | (1 << Python3Parser.FOR) | (1 << Python3Parser.NOT) | (1 << Python3Parser.NONE) | (1 << Python3Parser.TRUE) | (1 << Python3Parser.FALSE))) !== 0) || ((((_la - 36)) & ~0x1F) === 0 && ((1 << (_la - 36)) & ((1 << (Python3Parser.CONTINUE - 36)) | (1 << (Python3Parser.BREAK - 36)) | (1 << (Python3Parser.NAME - 36)) | (1 << (Python3Parser.STRING_LITERAL - 36)) | (1 << (Python3Parser.DECIMAL_INTEGER - 36)) | (1 << (Python3Parser.FLOAT_NUMBER - 36)) | (1 << (Python3Parser.OPEN_PAREN - 36)) | (1 << (Python3Parser.OPEN_BRACK - 36)) | (1 << (Python3Parser.ADD - 36)) | (1 << (Python3Parser.MINUS - 36)) | (1 << (Python3Parser.OPEN_BRACE - 36)))) !== 0)) {
				{
				{
				this.state = 136;
				this.stmt();
				this.state = 140;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===Python3Parser.NEWLINE) {
					{
					{
					this.state = 137;
					this.match(Python3Parser.NEWLINE);
					}
					}
					this.state = 142;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
				}
				this.state = 147;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 148;
			this.match(Python3Parser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public funcdef(): FuncdefContext {
		let _localctx: FuncdefContext = new FuncdefContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, Python3Parser.RULE_funcdef);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 150;
			this.match(Python3Parser.DEF);
			this.state = 151;
			this.match(Python3Parser.NAME);
			this.state = 152;
			this.parameters();
			this.state = 153;
			this.match(Python3Parser.NEWLINE);
			this.state = 154;
			this.suite();
			this.state = 155;
			this.match(Python3Parser.T__0);
			this.state = 156;
			this.match(Python3Parser.DEF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public parameters(): ParametersContext {
		let _localctx: ParametersContext = new ParametersContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, Python3Parser.RULE_parameters);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 158;
